version = "1.0.1"

allprojects {
    apply plugin: "java"
    apply plugin: "idea"

    idea {
        module {
            downloadJavadoc = true
            downloadSources = true
        }
    }

    repositories {
        mavenCentral()
        gradlePluginPortal()
    }

    ext {
        keycloakVersion = "25.0.2"
        quarkusVersion = "3.8.5"
        lombokVersion = "1.18.34"
        mapstructVersion = "1.5.5.Final"
        generatedMapperSourcesDir = "${buildDir}/generated-src/mapstruct/main"
        toolsDir = new File(projectDir, "tools")
    }

    compileJava.options.encoding = "UTF-8"

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
    }

    java {
        sourceCompatibility = JavaLanguageVersion.of(17)
        targetCompatibility = JavaLanguageVersion.of(17)
    }
}

subprojects {

    version = rootProject.version // + "-" + (System.getenv("CI_PIPELINE_ID") != null ? System.getenv("CI_PIPELINE_ID") : "SNAPSHOT")
    group = "ru.alamics.sso"

    buildDir = new File(rootProject.projectDir, "build/" + project.name)

    java {
        sourceCompatibility = JavaLanguageVersion.of(17)
        targetCompatibility = JavaLanguageVersion.of(17)
    }

    dependencies {
        compileOnly(platform("io.quarkus:quarkus-bom:$quarkusVersion"))

        compileOnly "org.projectlombok:lombok:$lombokVersion"
        annotationProcessor "org.projectlombok:lombok:$lombokVersion"
        compileOnly "org.mapstruct:mapstruct:$mapstructVersion"
        annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"

        testImplementation "org.projectlombok:lombok:$lombokVersion"
        testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
        testImplementation "org.junit.jupiter:junit-jupiter-api:5.11.0"
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.11.0"
        testImplementation "org.assertj:assertj-core:3.26.3"
        testImplementation "org.mockito:mockito-junit-jupiter:5.12.0"
        testImplementation 'org.slf4j:slf4j-simple:2.0.16'
    }

    test {
        useJUnitPlatform()
        reports.junitXml.outputLocation = new File(rootProject.projectDir, "build/test-results/" + project.name)
        reports.html.outputLocation = new File(rootProject.projectDir, "build/test-results/" + project.name + "/reports")
    }

}

// FIXME restore deploy front resources hash

dependencies {
    implementation (
            project(":keycloak-extension"),
    )
}
